--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@emotion/is-prop-valid": "1.3.1",
     "lucide-react": "0.518.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "7.6.2",
     "styled-components": "6.1.19",
     "styled-normalize": "8.1.1"
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.29.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "18.3.23",
+    "@types/react-dom": "18.3.7",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "8.57.1",
     "eslint-config-airbnb": "19.0.4",
