--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "resumake",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -44,5 +43,8 @@
     "stylelint": "16.20.0",
     "stylelint-config-standard": "38.0.0",
     "vite": "6.3.5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
