--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.3.1",
     "react-router-dom": "7.6.2",
     "styled-components": "6.1.19",
-    "styled-normalize": "8.1.1"
+    "styled-normalize": "8.1.1",
+    "zustand": "5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
