--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "1.3.1",
+    "html-to-image": "1.11.13",
     "lucide-react": "0.518.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -34,7 +35,7 @@
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "5.5.0",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.2.0",
     "husky": "9.1.7",
